--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fontsource/aclonica": "^4.5.9",
+    "@fontsource/nanum-pen-script": "^4.5.7",
     "framer-motion": "^7.1.0",
     "next": "12.2.4",
     "next-themes": "^0.2.0",
