--- a/package.json
+++ b/package.json
@@ -1,30 +1,31 @@
 {
-  "name": "portfolio",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@fontsource/aclonica": "^4.5.9",
-    "@fontsource/nanum-pen-script": "^4.5.7",
-    "framer-motion": "^7.1.0",
-    "next": "12.2.4",
-    "next-themes": "^0.2.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.4.0",
-    "react-spinners": "^0.13.6",
-    "typewriter-effect": "^2.19.0"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.8",
-    "eslint": "8.21.0",
-    "eslint-config-next": "12.2.4",
-    "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8"
-  }
+	"name": "reynaldsampelo.com",
+	"version": "0.1.0",
+	"private": true,
+	"description": "My portfolio website",
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@fontsource/aclonica": "^4.5.9",
+		"@fontsource/nanum-pen-script": "^4.5.7",
+		"framer-motion": "^7.1.0",
+		"next": "12.2.4",
+		"next-themes": "^0.2.0",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-icons": "^4.4.0",
+		"react-spinners": "^0.13.6",
+		"typewriter-effect": "^2.19.0"
+	},
+	"devDependencies": {
+		"autoprefixer": "^10.4.8",
+		"eslint": "8.21.0",
+		"eslint-config-next": "12.2.4",
+		"postcss": "^8.4.16",
+		"tailwindcss": "^3.1.8"
+	}
 }
